# Copyright (c) 2017 the original author or authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "jvmkill"
version = "0.0.1"
authors = [ "Glyn Normington <gnormington@pivotal.io>" ]
description = "JVM resource exhaustion agent"
keywords = [ "java", "jvm", "jvmti" ]
build = "build.rs"

[lib]
# may be able to reduce the list below to just cdylib
crate_type = [ "cdylib", "dylib", "rlib" ]

[dependencies]
libc = "0.2.*"
time = "0.1.*"
lazy_static = "0.2.*"

[dev-dependencies]
nix = "0.8.1"

[build-dependencies]
bindgen = "0.24"
