# Copyright (c) 2015-2022 the original author or authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "jvmkill"
version = "1.17.0-RELEASE"
edition = "2021"
authors = [
    "Glyn Normington <gnormington@pivotal.io>",
    "Ben Hale <bhale@pivotal.io>",
    "Daniel Mikusa <dmikusa@vmware.com>"]
description = "JVM resource exhaustion agent"
license = "Apache-2.0"
keywords = [ "java", "jvm", "jvmti" ]
build = "build.rs"

[lib]
crate_type = [ "cdylib" ]

[dependencies]
libc = "0.2"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
nix = "0.24"

[build-dependencies]
bindgen = "0.59"
